# better-auth

./: .gardenignore  .gitmodules  CLAUDE.md  ERRORS.md  README.md  c  run-all-checks.sh  run-format-checks.sh  run-integration-tests.sh  run-lint.sh  run-lints.sh  run-unit-tests.sh
examples/basic/: .gitignore  CLAUDE.md  README.md  garden.yml  project.garden.yml
examples/basic/clients/ios/: .gitignore  Makefile  (+1 more)
examples/basic/scripts/: export-hsm-identity.sh  red-button.sh  rotate-hsm-key.sh
examples/basic/services/app-rs/: Cargo.toml  Dockerfile  garden.yml  manifests.yml.tpl
examples/basic/services/app-rs/src/: main.rs
examples/basic/services/app-rs/src/implementation/crypto/: mod.rs
examples/basic/services/app-rs/src/implementation/encoding/: mod.rs
examples/basic/services/app-rs/src/implementation/storage/: key_verifier.rs  mod.rs  redis_verification_key_store.rs  server_time_lock_store.rs  utils.rs
examples/basic/test-fixtures/: hsm-authorization-key.cesr  hsm-authorization-key.pem
examples/cloudflare-worker/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  worker.config.capnp
examples/cloudflare-worker/src/: entry.ts  router.ts  server.ts
examples/garden-k8s/: CLAUDE.md  README.md  project.garden.yml
examples/garden-k8s/scripts/: purge-keys-and-roll-services.sh
examples/garden-k8s/test-fixtures/: .gitignore
scripts/: install-hooks.sh  pull-repos.sh  run-all-checks.sh  run-format-checks.sh  run-integration-tests.sh  run-lints.sh  run-setup.sh  run-type-checks.sh  run-unit-tests.sh
scripts/hooks/: pre-commit
(+195 files in other folders)
