[package]
name = "better-auth-app-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
better-auth = { path = "../dependencies/better-auth-rs" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"
blake3 = "1.5"
p256 = { version = "0.13", features = ["ecdsa", "std"] }
base64 = "0.22"
chrono = "0.4"
flate2 = "1.0"
rand = "0.8"
